name: eve-api
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: sdressel@techfak.uni-bielefeld.de
homepage: https://github.com/Drezil/eve-api
synopsis: Wrapper for EVE-API with Conduit+XML+Lens
category: Game
author: Stefan Dresselhaus
extra-source-files:
    README.md

library
    build-depends:
        base >=4.8 && <4.9,
        xml-lens -any,
        xml-conduit -any,
        HTTP -any,
        text,
        lens,
        generic-deriving,
        bytestring,
        http-conduit,
        safe

    default-language: Haskell2010
    exposed-modules:
        Eve.Api.Char
        Eve.Api.Types
        Eve.Api.Internal
    extensions: OverloadedStrings,
                DeriveGeneric,
                TemplateHaskell

