name: eve-api
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: sdressel@techfak.uni-bielefeld.de
homepage: https://github.com/Drezil/eve-api
synopsis: Wrapper for EVE-API with Conduit+XML+Lens
category: Game
author: Stefan Dresselhaus
extra-source-files:
    README.md

library
    exposed-modules:
        Eve.Api.Char
        Eve.Api.Types
        Eve.Api.Internal
        Eve.Api.Char.AccountBalance
    build-depends:
        base >=4.8 && <4.9,
        xml-lens -any,
        xml-conduit -any,
        HTTP -any,
        text -any,
        lens -any,
        generic-deriving -any,
        bytestring -any,
        http-conduit -any,
        safe -any
    default-language: Haskell2010
    extensions: OverloadedStrings DeriveGeneric TemplateHaskell
